20070806
	/module/lists.m add PATH(!), also simplify concat implementation
20070725
	/dis/man initialise fils correctly to empty list and remove hack (issue 56)
20070720
	utils/5l/asm.c: ensure SBZ field in MOV is regarded as MBZ (ie, force to zero)
20070714
	add Sys->readn, update sys-read(2)
	copy two repairs from emu/port/inferno.c to os/port/inferno.c
	remove readn implementation from several commands
	print correct diagnostic in appl/cmd/crypt.b
	prevent window titlebars from being dragged out of the main window in wm/wm.b
20070619
	remembered to include /appl/cmd/trfs.b /dis/trfs.dis
20070614
	/appl/lib/venti.b bug fixes, a few more errstrs, remove prints to stderr
	add initial module/vac.m appl/lib/vac.b from mjl (gsoc project ventivac)
	add initial /appl/cmd/^(vacfs.b vacget.b vacput.b) /man/4/vacfs /man/1/vacget from mjl (gsoc:ventivac)
	include omitted man/mkfile man/lib
20070608
	update /lib9 functions to use silly va_copy (and then va_end) instead of just assigning, to account for silly C implementations
	change /appl/cmd/mc.b not to require Draw or Env (so lc works on smaller systems)
	update acme to include the font size data (eg, for use by mc(1))
20070607
	/appl/wm/man.b /appl/lib/man.b to allow 10.1 etc as section references
20070605
	add another xopen #define to lib9.h includes for Linux
	copy plan9 acme's colormix
20070601
	/appl/cmd/ls.b /dis/ls.dis /man/1/ls: document new -F option and -T option
	/appl/cmd/auth/factotum/factotum.b: ignore empty writes, don't fail; make a few diagnostics match plan 9
	rename /appl/cmd/mc.b to /appl/cmd/calc.b; also /man/1/mc to /man/1/calc; /dis/mc.dis to /dis/calc.dis
	add /appl/cmd/mc.b (initial version)
	replace /dis/lc.dis by /dis/lc; remove /appl/cmd/lc.b
	remove /appl/cmd/mathcalc.b /dis/mathcalc.dis /man/1/mathcalc
20070510
	quickly remove references to udp's "oldheaders" because plan 9 removed it
	remove obootpd completely
20070418
	add scan code to X11 (issue 45)
20070411